@@ -5,12 +5,13 @@ import java.nio.file.*;
 import java.time.*;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 /**
  * Fetches GitHub stars and last commit data for repositories and creates a mapping file.
  *
- * Usage: step_3_generate_badges.java [parsed_projects_file] [stats_file]
+ * Usage: step_3_generate_stats.java [parsed_projects_file] [stats_file]
  */
 void main(String[] args) throws IOException, InterruptedException {
   var inputPath = args.length > 0 ? Path.of(args[0]) : Path.of(Constants.TMP_DIR + "/" + Constants.PARSED_PROJECTS_FILE);
@@ -39,7 +40,7 @@ void main(String[] args) throws IOException, InterruptedException {
     }
   }
 
-  // Generate stats mappings with actual GitHub data (only fetch missing ones)
+  // Generate stats mappings with actual GitHub data
   var statsMappings = generateStatsMappings(entries, existingMappings);
 
   // Write stats mappings
@@ -67,7 +68,7 @@ List<ProjectEntry> readParsedEntries(Path inputPath) throws IOException {
     String name = null, url = null, description = null;
     int linesToSkip = 0;
 
-    for (var line : section.split("\n")) {
+    for (var line : section.lines().toArray(String[]::new)) {
       if (line.startsWith(Constants.NAME_PREFIX)) {
         name = line.substring(Constants.NAME_PREFIX.length());
       } else if (line.startsWith(Constants.URL_PREFIX)) {
@@ -104,7 +105,7 @@ Map<String, StatsMapping> readStatsMappings(Path statsPath) throws IOException {
     }
     String repo = null, name = null, starsText = null, lastCommitText = null;
 
-    for (var line : section.split("\n")) {
+    for (var line : section.lines().toArray(String[]::new)) {
       if (line.trim().isEmpty()) {
         continue;
       }
@@ -149,14 +150,12 @@ List<StatsMapping> generateStatsMappings(List<ProjectEntry> entries, Map<String,
   }
 
   System.out.println("Using GitHub PAT");
-  var clientBuilder = HttpClient.newBuilder();
-  var client = clientBuilder.build();
+  var client = HttpClient.newHttpClient();
   var total = entries.stream().filter(ProjectEntry::isGitHubRepo).count();
   var processed = 0;
 
   for (var entry : entries) {
     if (!entry.isGitHubRepo()) {
-      // Non-GitHub repos get NO_STATS for both stars and commit
       mappings.add(new StatsMapping(
         entry.name(),
         "",
@@ -186,7 +185,6 @@ List<StatsMapping> generateStatsMappings(List<ProjectEntry> entries, Map<String,
         !existing.lastCommitText().equals(Constants.NO_STATS) &&
         !existing.starsText().equals(Constants.INVALID_REPO) &&
         !existing.lastCommitText().equals(Constants.INVALID_REPO)) {
-      // Reuse existing data
       mappings.add(existing);
       if (processed % 50 == 0) {
         System.out.printf("Processing %d/%d repositories... (using cached data)%n", processed, total);
@@ -194,94 +192,84 @@ List<StatsMapping> generateStatsMappings(List<ProjectEntry> entries, Map<String,
       continue;
     }
 
-    // Need to fetch new data
     if (processed % 10 == 0) {
       System.out.printf("Processing %d/%d repositories... (fetching from API)%n", processed, total);
     }
 
-    var starsText = fetchStars(client, repo, processed);
-    var lastCommitText = fetchLastCommit(client, repo, processed);
+    var stats = fetchRepoStats(client, repo, githubToken, processed);
 
     mappings.add(new StatsMapping(
       entry.name(),
       repo,
-      starsText,
-      lastCommitText
+      stats.starsText(),
+      stats.lastCommitText()
     ));
 
-    // Rate limiting: GitHub API allows 60 requests per hour without auth
-    // We make 2 requests per repo (stars + commit), so we can process ~30 repos/hour
-    // Add a delay to avoid hitting the limit too quickly
-    Thread.sleep(1000); // 1 second delay between repositories (2 requests per repo = 2 seconds total)
+    // Rate limiting: Add a 0.5 second delay to avoid hitting the limit too quickly
+    Thread.sleep(500);
   }
 
   return mappings;
 }
 
 /**
- * Fetches the number of stars for a GitHub repository.
+ * Builds an authenticated HTTP request for GitHub API.
  */
-String fetchStars(HttpClient client, String repo, int requestNumber) {
+HttpRequest buildGitHubRequest(String uri, String githubToken) {
+  var builder = HttpRequest.newBuilder()
+      .uri(URI.create(uri))
+      .header("Accept", "application/vnd.github.v3+json");
+
+  if (githubToken != null && !githubToken.isBlank()) {
+    builder.header("Authorization", "Bearer %s".formatted(githubToken));
+  }
+
+  return builder.GET().build();
+}
+
+/**
+ * Fetches both stars and last commit date in a single API request.
+ */
+record RepoStats(String starsText, String lastCommitText) {}
+
+RepoStats fetchRepoStats(HttpClient client, String repo, String githubToken, int requestNumber) {
   try {
-    var githubToken = System.getenv("GITHUB_TOKEN");
-    var requestBuilder = HttpRequest.newBuilder()
-        .uri(URI.create("https://api.github.com/repos/" + repo))
-        .header("Accept", "application/vnd.github.v3+json");
-
-    // Add authentication header if token is available
-    if (githubToken != null && !githubToken.isBlank()) {
-      requestBuilder.header("Authorization", "Bearer " + githubToken);
-    }
-
-    var request = requestBuilder.GET().build();
-
+    var request = buildGitHubRequest("https://api.github.com/repos/" + repo, githubToken);
     var response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-    // Check rate limit headers
-    var rateLimitRemaining = response.headers().firstValue("X-RateLimit-Remaining");
-    if (rateLimitRemaining.isPresent()) {
-      var remaining = Integer.parseInt(rateLimitRemaining.get());
-      if (requestNumber % 10 == 0) {
-        System.out.printf("  API requests remaining: %d%n", remaining);
-      }
-      if (remaining <= 0) {
-        var rateLimitReset = response.headers().firstValue("X-RateLimit-Reset");
-        if (rateLimitReset.isPresent()) {
-          var resetTime = Instant.ofEpochSecond(Long.parseLong(rateLimitReset.get()));
-          var waitSeconds = Duration.between(Instant.now(), resetTime).getSeconds() + 5; // Add 5 second buffer
-          System.err.printf("ERROR: Rate limit exceeded! Waiting %d seconds until reset...%n", waitSeconds);
-          Thread.sleep(Math.min(waitSeconds * 1000L, 3600000)); // Wait up to 1 hour
-          // Retry once
-          return fetchStars(client, repo, requestNumber);
-        }
-      }
-    }
+    return switch (response.statusCode()) {
+      case 200 -> {
+        var body = response.body();
+        var starsMatcher = Constants.STARS_PATTERN.matcher(body);
+        var pushedAtMatcher = Constants.PUSHED_AT_PATTERN.matcher(body);
 
-    if (response.statusCode() == 200) {
-      var body = response.body();
-      // Simple JSON parsing - extract stargazers_count
-      var pattern = java.util.regex.Pattern.compile("\"stargazers_count\"\\s*:\\s*(\\d+)");
-      var matcher = pattern.matcher(body);
-      if (matcher.find()) {
-        var stars = Long.parseLong(matcher.group(1));
-        return formatStars(stars);
+        var starsText = starsMatcher.find()
+          ? formatStars(Long.parseLong(starsMatcher.group(1)))
+          : Constants.NO_STATS;
+
+        var lastCommitText = pushedAtMatcher.find()
+          ? formatDate(pushedAtMatcher.group(1))
+          : Constants.NO_STATS;
+
+        yield new RepoStats(starsText, lastCommitText);
       }
-    } else if (response.statusCode() == 404) {
-      // Repository not found - mark as invalid
-      System.err.printf("WARNING: Repository %s not found (may have been deleted or moved)%n", repo);
-      return Constants.INVALID_REPO;
-    } else if (response.statusCode() == 403) {
-      System.err.printf("WARNING: Access forbidden for %s (may be private or rate limited)%n", repo);
-      return Constants.NO_STATS;
-    }
+      case 404 -> {
+        System.err.printf("ERROR: Repository %s not found%n", repo);
+        yield new RepoStats(Constants.INVALID_REPO, Constants.INVALID_REPO);
+      }
+      case 403 -> {
+        System.err.printf("ERROR: Access forbidden for %s%n", repo);
+        yield new RepoStats(Constants.NO_STATS, Constants.NO_STATS);
+      }
+      default -> new RepoStats(Constants.NO_STATS, Constants.NO_STATS);
+    };
   } catch (InterruptedException e) {
     Thread.currentThread().interrupt();
-    return Constants.NO_STATS;
+    return new RepoStats(Constants.NO_STATS, Constants.NO_STATS);
   } catch (Exception e) {
-    // Log error for debugging
-    System.err.printf("ERROR fetching stars for %s: %s%n", repo, e.getMessage());
+    System.err.printf("ERROR fetching stats for %s: %s%n", repo, e.getMessage());
+    return new RepoStats(Constants.NO_STATS, Constants.NO_STATS);
   }
-  return Constants.NO_STATS;
 }
 
 /**
@@ -292,68 +280,6 @@ String formatStars(long stars) {
     return "%.1fk".formatted(stars / 1000.0);
   }
   return String.valueOf(stars);
-}
-
-/**
- * Fetches the last commit date for a GitHub repository.
- */
-String fetchLastCommit(HttpClient client, String repo, int requestNumber) {
-  try {
-    var githubToken = System.getenv("GITHUB_TOKEN");
-    var requestBuilder = HttpRequest.newBuilder()
-        .uri(URI.create("https://api.github.com/repos/" + repo + "/commits?per_page=1"))
-        .header("Accept", "application/vnd.github.v3+json");
-
-    // Add authentication header if token is available
-    if (githubToken != null && !githubToken.isBlank()) {
-      requestBuilder.header("Authorization", "Bearer " + githubToken);
-    }
-
-    var request = requestBuilder.GET().build();
-
-    var response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
-    // Check rate limit headers
-    var rateLimitRemaining = response.headers().firstValue("X-RateLimit-Remaining");
-    if (rateLimitRemaining.isPresent()) {
-      var remaining = Integer.parseInt(rateLimitRemaining.get());
-      if (remaining <= 0) {
-        var rateLimitReset = response.headers().firstValue("X-RateLimit-Reset");
-        if (rateLimitReset.isPresent()) {
-          var resetTime = Instant.ofEpochSecond(Long.parseLong(rateLimitReset.get()));
-          var waitSeconds = Duration.between(Instant.now(), resetTime).getSeconds() + 5; // Add 5 second buffer
-          System.err.printf("ERROR: Rate limit exceeded! Waiting %d seconds until reset...%n", waitSeconds);
-          Thread.sleep(Math.min(waitSeconds * 1000L, 3600000)); // Wait up to 1 hour
-          // Retry once
-          return fetchLastCommit(client, repo, requestNumber);
-        }
-      }
-    }
-
-    if (response.statusCode() == 200) {
-      var body = response.body();
-      // Extract commit date from JSON - look for "committer" -> "date"
-      var pattern = java.util.regex.Pattern.compile("\"committer\"\\s*:\\s*\\{[^}]*\"date\"\\s*:\\s*\"([^\"]+)\"");
-      var matcher = pattern.matcher(body);
-      if (matcher.find()) {
-        var dateStr = matcher.group(1);
-        return formatDate(dateStr);
-      }
-    } else if (response.statusCode() == 404) {
-      // Repository not found - mark as invalid
-      return Constants.INVALID_REPO;
-    } else if (response.statusCode() == 403) {
-      System.err.printf("WARNING: Access forbidden for %s (may be private or rate limited)%n", repo);
-      return Constants.NO_STATS;
-    }
-  } catch (InterruptedException e) {
-    Thread.currentThread().interrupt();
-    return Constants.NO_STATS;
-  } catch (Exception e) {
-    // Log error for debugging
-    System.err.printf("ERROR fetching last commit for %s: %s%n", repo, e.getMessage());
-  }
-  return Constants.NO_STATS;
 }
 
 /**
@@ -399,13 +325,17 @@ String formatDate(String dateStr) {
  */
 void writeStatsMappings(Path outputPath, List<StatsMapping> mappings) throws IOException {
   var content = mappings.stream()
-      .map(m -> String.format(
-          "%s%s\n%s%s\n%s%s\n%s%s",
-          Constants.REPO_PREFIX, m.repo(),
-          Constants.NAME_PREFIX, m.name(),
-          Constants.STARS_PREFIX, m.starsText(),
-          Constants.COMMIT_PREFIX, m.lastCommitText()
-        ))
+      .map(m -> """
+          %s%s
+          %s%s
+          %s%s
+          %s%s
+          """.formatted(
+            Constants.REPO_PREFIX, m.repo(),
+            Constants.NAME_PREFIX, m.name(),
+            Constants.STARS_PREFIX, m.starsText(),
+            Constants.COMMIT_PREFIX, m.lastCommitText()
+          ).trim())
       .collect(Collectors.joining("\n\n"));
 
   FileUtils.writeOutputFile(outputPath, content);
